Agregar vista, servicio y tabla con lectura de fotos

--- a/admin/views/partials/nav.ejs
+++ b/admin/views/partials/nav.ejs
@@ -9,16 +9,16 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item"> <a class="nav-link d-flex align-items-center gap-2 active"
-                                    aria-current="page" href="#"> <svg class="bi" aria-hidden="true">
+                                    aria-current="page" href="/"> <svg class="bi" aria-hidden="true">
                                         <use xlink:href="#house-fill"></use>
                                     </svg>
                                     Dashboard
                                 </a> </li>
-                            <li class="nav-item"> <a class="nav-link d-flex align-items-center gap-2" href="#"> <svg
+                            <li class="nav-item"> <a class="nav-link d-flex align-items-center gap-2" href="/photos"> <svg
                                         class="bi" aria-hidden="true">
                                         <use xlink:href="#file-earmark"></use>
                                     </svg>
-                                    Orders
+                                    Fotos
                                 </a> </li>
                             <li class="nav-item"> <a class="nav-link d-flex align-items-center gap-2" href="#"> <svg
                                         class="bi" aria-hidden="true">
